# traceur

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS.txt  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  README.txt  appveyor.yml
assets/: CornellBox-Empty-CO.mtl  CornellBox-Empty-RG.mtl  CornellBox-Empty-Squashed.mtl  CornellBox-Empty-White.mtl  CornellBox-Glossy.mtl  CornellBox-Mirror.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl  cube.mtl  dodge.mtl  dragon.mtl  featurescene.mtl  finalscene.mtl  firstSceen.mtl  interior.mtl  pokeball.mtl  pokeballopt.mtl  untitled2.mtl  untitled3.mtl  untitled4.mtl  untitled5.mtl  untitled7.mtl
traceur-core/: CMakeLists.txt
traceur-core/include/traceur/core/kernel/: basic.hpp  film.hpp  hit.hpp  kernel.hpp  multithreaded.hpp  observer.hpp  pixel.hpp  ray.hpp
traceur-core/include/traceur/core/lightning/: light.hpp
traceur-core/include/traceur/core/material/: material.hpp
traceur-core/include/traceur/core/scene/: camera.hpp  scene.hpp
traceur-core/include/traceur/core/scene/graph/: builder.hpp  factory.hpp  graph.hpp  kdtree.hpp  node.hpp  vector.hpp  visitor.hpp
traceur-core/include/traceur/core/scene/primitive/: box.hpp  primitive.hpp  sphere.hpp  triangle.hpp
traceur-core/include/traceur/exporter/: exporter.hpp
traceur-core/include/traceur/loader/: loader.hpp
traceur-core/src/traceur/core/kernel/: basic.cpp  multithreaded.cpp
traceur-core/src/traceur/core/scene/: camera.cpp
traceur-core/src/traceur/core/scene/graph/: kdtree.cpp  vector.cpp
traceur-exporter-ppm/: CMakeLists.txt
traceur-exporter-ppm/include/traceur/exporter/: ppm.hpp
traceur-exporter-ppm/src/traceur/exporter/: ppm.cpp
traceur-frontend-cli/: CMakeLists.txt
traceur-frontend-cli/src/frontend/cli/: main.cpp
traceur-frontend-glut/: CMakeLists.txt
traceur-frontend-glut/include/: Vec3D.h  Vertex.h  imageWriter.h  matrix.h  mesh.h  raytracing.h  traqueboule.h
traceur-frontend-glut/include/traceur/frontend/glut/: debug.hpp  observer.hpp  preview.hpp  progress.hpp  renderer.hpp  trackball.hpp  visitor.hpp
traceur-frontend-glut/src/: main.cpp  mesh.cpp  raytracing.cpp
traceur-frontend-glut/src/frontend/glut/: debug.cpp  main.cpp  observer.cpp  preview.cpp  progress.cpp  renderer.cpp  trackball.cpp  visitor.cpp
traceur-loader-obj/: CMakeLists.txt
traceur-loader-obj/include/traceur/loader/: obj.hpp
traceur-loader-obj/src/: main.cpp
traceur-loader-obj/src/traceur/loader/: obj.cpp
traceur-loader-wavefront/: CMakeLists.txt
traceur-loader-wavefront/include/traceur/loader/: wavefront.hpp
traceur-loader-wavefront/src/traceur/loader/: wavefront.cpp
